mintmenu (4.8.1) helena; urgency=low

  * Dependency on mint-common
  * Updated calls to newer pyinotify API
  * Updated path of keybinder API

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  8 Oct 2009 10:26:00 +0000

mintmenu (4.8.0) helena; urgency=low

  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/generic-branding

 -- Clement Lefebvre <root@linuxmint.com>  Wed,  29 Jul 2009 22:48:00 +0000

mintmenu (4.7.9) gloria; urgency=low

  * Fix: Hitting enter on search does nothing (https://bugs.launchpad.net/bugs/399990)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 16:02:00 +0000

mintmenu (4.7.8) gloria; urgency=low

  * Fix: launching terminal=true applications (example: htop)

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  19 Jun 2009 10:27:00 +0000

mintmenu (4.7.7) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  18 Jun 2009 12:38:00 +0000

mintmenu (4.7.6) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  19 May 2009 18:16:00 +0000

mintmenu (4.7.5) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  18 May 2009 19:12:00 +0000

mintmenu (4.7.4) gloria; urgency=low

  * Removed initial call to refreshTrash() in plugins/places.py, suspected to cause regression with Gnome Trash

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  18 May 2009 20:15:00 +0000

mintmenu (4.7.3) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 19:52:00 +0000

mintmenu (4.7.2) gloria; urgency=low

  * Added translations

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 18:56:00 +0000

mintmenu (4.7.1) gloria; urgency=low

  * Now opens x-terminal-emulator instead of calling gnome-terminal directly
  * Changed default key shortcut from Super_L to <Control>Super_L
  * Added "clean" option to the "mintmenu" command
