@@ -3,6 +3,7 @@ mintmenu (4.8.1) helena; urgency=low
   * Dependency on mint-common
   * Updated calls to newer pyinotify API
   * Updated path of keybinder API
+  * Removed dependency on mintinstall
 
  -- Clement Lefebvre <root@linuxmint.com>  Thu,  8 Oct 2009 10:26:00 +0000
 
